log/build_2025-12-23_17-57-57/chimera_stitching/stdout_stderr.log
running egg_info
writing ../../build/chimera_stitching/chimera_stitching.egg-info/PKG-INFO
writing dependency_links to ../../build/chimera_stitching/chimera_stitching.egg-info/dependency_links.txt
writing entry points to ../../build/chimera_stitching/chimera_stitching.egg-info/entry_points.txt
writing requirements to ../../build/chimera_stitching/chimera_stitching.egg-info/requires.txt
writing top-level names to ../../build/chimera_stitching/chimera_stitching.egg-info/top_level.txt
reading manifest file '../../build/chimera_stitching/chimera_stitching.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/chimera_stitching/chimera_stitching.egg-info/SOURCES.txt'
running build
running build_py
copying chimera_stitching/communication.py -> /home/chimera/ros2_ws/build/chimera_stitching/build/lib/chimera_stitching
copying chimera_stitching/stitching.py -> /home/chimera/ros2_ws/build/chimera_stitching/build/lib/chimera_stitching
copying chimera_stitching/test.py -> /home/chimera/ros2_ws/build/chimera_stitching/build/lib/chimera_stitching
copying chimera_stitching/__init__.py -> /home/chimera/ros2_ws/build/chimera_stitching/build/lib/chimera_stitching
running install
running install_lib
copying /home/chimera/ros2_ws/build/chimera_stitching/build/lib/chimera_stitching/communication.py -> /home/chimera/ros2_ws/install/chimera_stitching/lib/python3.10/site-packages/chimera_stitching
byte-compiling /home/chimera/ros2_ws/install/chimera_stitching/lib/python3.10/site-packages/chimera_stitching/communication.py to communication.cpython-310.pyc
  File "/home/chimera/ros2_ws/install/chimera_stitching/lib/python3.10/site-packages/chimera_stitching/communication.py", line 119
    print(F"\N[-] Listen timed out after {LISTEN_TIMEOUT} seconds.")
                                                                   ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 0-1: malformed \N character escape

running install_data
copying resource/chimera_stitching -> /home/chimera/ros2_ws/install/chimera_stitching/share/ament_index/resource_index/packages
copying package.xml -> /home/chimera/ros2_ws/install/chimera_stitching/share/chimera_stitching
running install_egg_info
removing '/home/chimera/ros2_ws/install/chimera_stitching/lib/python3.10/site-packages/chimera_stitching-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/chimera_stitching/chimera_stitching.egg-info to /home/chimera/ros2_ws/install/chimera_stitching/lib/python3.10/site-packages/chimera_stitching-0.0.0-py3.10.egg-info
running install_scripts
Installing communication script to /home/chimera/ros2_ws/install/chimera_stitching/lib/chimera_stitching
Installing stitching script to /home/chimera/ros2_ws/install/chimera_stitching/lib/chimera_stitching
writing list of installed files to '/home/chimera/ros2_ws/build/chimera_stitching/install.log'
